correct explore notebook to match change of data location

--- a/explore.ipynb
+++ b/explore.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,13 +132,13 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "all_files = all_files = glob.glob(os.path.join('morebikes2020/Train/Train', '*.csv'))\n",
+    "all_files = all_files = glob.glob(os.path.join('Train/Train', '*.csv'))\n",
     "df = pd.concat((pd.read_csv(f) for f in all_files), ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,16 +692,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = pd.read_csv('morebikes2020/test.csv')"
+    "test_data = pd.read_csv('test.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
        "[8 rows x 24 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
        "<AxesSubplot:xlabel='hour'>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1047,14 +1047,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1067,10 +1067,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7548961c40>"
+       "<matplotlib.image.AxesImage at 0x7f0f2d600a90>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
        "<AxesSubplot:title={'center':'total bikes docked'}, xlabel='datetime'>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
        "Name: bikes, dtype: float64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
        "1414285200.0"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
        "[75 rows x 25 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
        "[75 rows x 25 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2082,16 +2082,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1414281600.0"
+       "1414296000.0"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2102,16 +2102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1414285200.0"
+       "1414296000.0"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
