switch to using tidied data for the simple baselines

--- a/simple-baselines.ipynb
+++ b/simple-baselines.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "pd.set_option('display.max_columns', None)\n",
     "\n",
-    "all_files = all_files = glob.glob(os.path.join('Train/Train', '*.csv'))\n",
+    "all_files = all_files = glob.glob(os.path.join('Processed', '*.csv'))\n",
     "df = pd.concat((pd.read_csv(f) for f in all_files), ignore_index=True)"
    ]
   },
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove the entries with no bikes value from when the clocks change (one per station)"
+    "Shuffle the data"
    ]
   },
   {
@@ -70,28 +70,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[df['bikes'].isna() != True]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Shuffle the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df = sklearn.utils.shuffle(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,15 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.27115442 -3.25831093 -3.30951314 -3.26560633 -3.28142174]\n",
-      "-3.277201314217444\n"
+      "[-3.28294504 -3.3479764  -3.25244176 -3.26084229 -3.24180108]\n",
+      "-3.277201314217443\n"
      ]
     }
    ],
@@ -134,27 +118,25 @@
     "## Predict full_profile_bikes\n",
     "\n",
     "1. Fill in missing values of full_profile_bikes\n",
-    "2. Shuffle data\n",
-    "3. Remove entries with no bikes value from when clocks change (one per station)"
+    "2. Shuffle data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.3362505  -3.30197755 -3.30360041 -3.36674072 -3.31194245]\n",
+      "[-3.34071709 -3.35279147 -3.30447282 -3.26926959 -3.35326065]\n",
       "-3.3241023247710073\n"
      ]
     }
    ],
    "source": [
     "df['full_profile_bikes'] = df.groupby(['station', 'weekhour']).full_profile_bikes.transform(lambda x: x.fillna(x.mean()))\n",
-    "df = df[df['bikes'].isna() != True]\n",
     "df = sklearn.utils.shuffle(df)\n",
     "\n",
     "regr = Baseline('full_profile_bikes')\n",
@@ -172,23 +154,22 @@
     "So attempt to adjust the value from 3 hours ago with the mean change seen at the station at the same time of the week\n",
     "\n",
     "1. Fill early empty full_profile_3h_diff_bikes values. This time filling with 0 for now.\n",
-    "2. Remove entries with target value missing\n",
-    "3. Shuffle data\n",
-    "4. Add column that is sum of bikes_3h_ago and full_profile_3h_diff_bikes\n",
-    "5. Use this new column as Baseline"
+    "2. Shuffle data\n",
+    "3. Add column that is sum of bikes_3h_ago and full_profile_3h_diff_bikes\n",
+    "4. Use this new column as Baseline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.04696087 -3.03126493 -2.98303465 -2.96600956 -3.04823775]\n",
-      "-3.0151015531660694\n"
+      "[-3.00198626 -3.00926673 -3.04877539 -2.970908   -3.04457139]\n",
+      "-3.01510155316607\n"
      ]
     }
    ],
@@ -197,7 +178,6 @@
     "# df['full_profile_3h_diff_bikes'] = df.groupby(['station', 'weekhour']).full_profile_3h_diff_bikes.transform(lambda x: x.fillna(x.mean()))\n",
     "\n",
     "df['3h_plus_diff'] = df['bikes_3h_ago'] + df['full_profile_3h_diff_bikes']\n",
-    "df = df[df['bikes'].isna() != True]\n",
     "df = sklearn.utils.shuffle(df)\n",
     "\n",
     "regr = Baseline('3h_plus_diff')\n",
@@ -206,6 +186,20 @@
     "print(scores)\n",
     "print(scores.mean())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See a ~10% reduction in MAE with this combination of bikes_3h_ago and the rolling diff at similar times of the week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
