--- a/henry-exploring.ipynb
+++ b/henry-exploring.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3880,6 +3880,94 @@
    ],
    "source": [
     "df[[\"weekhour\", \"windMaxSpeed.m.s\", \"windMeanSpeed.m.s\", \"temperature.C\", \"relHumidity.HR\", \"airPressure.mb\", \"bikes_3h_ago\", \"bikes\"]].corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Short and full profile values are the same in our dataset\n",
+    "Because it only covers 1 month, they do not have time to diverge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df.short_profile_3h_diff_bikes.isnull() != df.full_profile_3h_diff_bikes.isnull()).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df.short_profile_bikes.isnull() != df.full_profile_bikes.isnull()).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((df.full_profile_3h_diff_bikes != df.short_profile_3h_diff_bikes) & (df.short_profile_3h_diff_bikes.isnull() == False)).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((df.full_profile_bikes != df.short_profile_bikes) & (df.short_profile_bikes.isnull() == False)).sum()"
    ]
   },
   {
