add baselines computed on a per-station level
results are the same (as expected since Baselines use only data from features being predicted for and do not learn) but useful bits of helper code extracted for later use

--- a/simple-baselines.ipynb
+++ b/simple-baselines.ipynb
@@ -14,7 +14,13 @@
    "outputs": [],
    "source": [
     "import sklearn\n",
-    "from sklearn.model_selection import cross_val_score"
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from helpers import Baseline, per_station_models_cross_val_mean, load_all_processed_data\n",
+    "\n",
+    "pd.set_option('display.max_columns', None)"
    ]
   },
   {
@@ -23,15 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import glob\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "\n",
-    "all_files = all_files = glob.glob(os.path.join('Processed', '*.csv'))\n",
-    "df = pd.concat((pd.read_csv(f) for f in all_files), ignore_index=True)"
+    "df = load_all_processed_data()"
    ]
   },
   {
@@ -50,43 +48,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.277201314217443\n"
+     ]
+    }
+   ],
    "source": [
-    "df['bikes_3h_ago'] = df.groupby(['station', 'weekhour']).bikes_3h_ago.transform(lambda x: x.fillna(x.mean()))"
+    "df['bikes_3h_ago'] = df.groupby(['station', 'weekhour']).bikes_3h_ago.transform(lambda x: x.fillna(x.mean()))\n",
+    "\n",
+    "regr = Baseline('bikes_3h_ago')\n",
+    "scores = cross_val_score(regr, df, df.bikes, cv=KFold(n_splits=5, shuffle=True), scoring='neg_mean_absolute_error')\n",
+    "\n",
+    "print(scores.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.277124150996634\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['bikes_3h_ago'] = df.groupby(['station', 'weekhour']).bikes_3h_ago.transform(lambda x: x.fillna(x.mean()))\n",
+    "\n",
+    "regr = Baseline('bikes_3h_ago')\n",
+    "\n",
+    "score = per_station_models_cross_val_mean(Baseline('bikes_3h_ago'), df)\n",
+    "print(score)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shuffle the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = sklearn.utils.shuffle(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Baseline(sklearn.base.BaseEstimator):\n",
-    "    def __init__(self, column):\n",
-    "        self.column = column\n",
-    "        \n",
-    "    def fit(self, X, y):\n",
-    "        pass\n",
-    "    def predict(self, X):\n",
-    "        return X[self.column]\n"
+    "## Predict full_profile_bikes\n",
+    "\n",
+    "1. Fill in missing values of full_profile_bikes"
    ]
   },
   {
@@ -98,27 +108,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.28294504 -3.3479764  -3.25244176 -3.26084229 -3.24180108]\n",
-      "-3.277201314217443\n"
+      "[-3.35697991 -3.30680319 -3.32330185 -3.3213243  -3.31210237]\n",
+      "-3.3241023247710073\n"
      ]
     }
    ],
    "source": [
-    "regr = Baseline('bikes_3h_ago')\n",
-    "scores = cross_val_score(regr, df, df.bikes, cv=5, scoring='neg_mean_absolute_error')\n",
+    "df['full_profile_bikes'] = df.groupby(['station', 'weekhour']).full_profile_bikes.transform(lambda x: x.fillna(x.mean()))\n",
+    "\n",
+    "regr = Baseline('full_profile_bikes')\n",
+    "scores = cross_val_score(regr, df, df.bikes, cv=KFold(n_splits=5, shuffle=True), scoring='neg_mean_absolute_error')\n",
     "\n",
     "print(scores)\n",
     "print(scores.mean())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Predict full_profile_bikes\n",
-    "\n",
-    "1. Fill in missing values of full_profile_bikes\n",
-    "2. Shuffle data"
    ]
   },
   {
@@ -130,20 +132,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.34071709 -3.35279147 -3.30447282 -3.26926959 -3.35326065]\n",
-      "-3.3241023247710073\n"
+      "-3.3241019719383815\n"
      ]
     }
    ],
    "source": [
     "df['full_profile_bikes'] = df.groupby(['station', 'weekhour']).full_profile_bikes.transform(lambda x: x.fillna(x.mean()))\n",
-    "df = sklearn.utils.shuffle(df)\n",
     "\n",
     "regr = Baseline('full_profile_bikes')\n",
-    "scores = cross_val_score(regr, df, df.bikes, cv=5, scoring='neg_mean_absolute_error')\n",
     "\n",
-    "print(scores)\n",
-    "print(scores.mean())"
+    "score = per_station_models_cross_val_mean(regr, df)\n",
+    "print(score)"
    ]
   },
   {
@@ -154,21 +153,20 @@
     "So attempt to adjust the value from 3 hours ago with the mean change seen at the station at the same time of the week\n",
     "\n",
     "1. Fill early empty full_profile_3h_diff_bikes values. This time filling with 0 for now.\n",
-    "2. Shuffle data\n",
-    "3. Add column that is sum of bikes_3h_ago and full_profile_3h_diff_bikes\n",
-    "4. Use this new column as Baseline"
+    "2. Add column that is sum of bikes_3h_ago and full_profile_3h_diff_bikes\n",
+    "3. Use this new column as Baseline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.00198626 -3.00926673 -3.04877539 -2.970908   -3.04457139]\n",
+      "[-3.0062724  -3.01493429 -2.99301822 -3.02810633 -3.03317652]\n",
       "-3.01510155316607\n"
      ]
     }
@@ -178,10 +176,9 @@
     "# df['full_profile_3h_diff_bikes'] = df.groupby(['station', 'weekhour']).full_profile_3h_diff_bikes.transform(lambda x: x.fillna(x.mean()))\n",
     "\n",
     "df['3h_plus_diff'] = df['bikes_3h_ago'] + df['full_profile_3h_diff_bikes']\n",
-    "df = sklearn.utils.shuffle(df)\n",
     "\n",
     "regr = Baseline('3h_plus_diff')\n",
-    "scores = cross_val_score(regr, df, df.bikes, cv=5, scoring='neg_mean_absolute_error')\n",
+    "scores = cross_val_score(regr, df, df.bikes, cv=KFold(n_splits=5, shuffle=True), scoring='neg_mean_absolute_error')\n",
     "\n",
     "print(scores)\n",
     "print(scores.mean())"
@@ -196,10 +193,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.0151336940967814\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['full_profile_3h_diff_bikes'] = df.full_profile_3h_diff_bikes.fillna(0)\n",
+    "# df['full_profile_3h_diff_bikes'] = df.groupby(['station', 'weekhour']).full_profile_3h_diff_bikes.transform(lambda x: x.fillna(x.mean()))\n",
+    "\n",
+    "df['3h_plus_diff'] = df['bikes_3h_ago'] + df['full_profile_3h_diff_bikes']\n",
+    "\n",
+    "regr = Baseline('3h_plus_diff')\n",
+    "\n",
+    "score = per_station_models_cross_val_mean(regr, df)\n",
+    "print(score)"
+   ]
   }
  ],
  "metadata": {
