--- a/simple-baselines.ipynb
+++ b/simple-baselines.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,6 +62,8 @@
    "source": [
     "df['bikes_3h_ago'] = df.groupby(['station', 'weekhour']).bikes_3h_ago.transform(lambda x: x.fillna(x.mean()))\n",
     "\n",
+    "# df['bikes_3h_ago'] = df['bikes_3h_ago'].fillna(df['bikes'])\n",
+    "\n",
     "regr = Baseline('bikes_3h_ago')\n",
     "scores = cross_val_score(regr, df, df.bikes, cv=KFold(n_splits=5, shuffle=True), scoring='neg_mean_absolute_error')\n",
     "\n",
@@ -70,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-3.277124150996634\n"
+      "-3.277193089062217\n"
      ]
     }
    ],
@@ -101,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.35697991 -3.30680319 -3.32330185 -3.3213243  -3.31210237]\n",
+      "[-3.3512383  -3.31866102 -3.29179174 -3.35190848 -3.30691209]\n",
       "-3.3241023247710073\n"
      ]
     }
@@ -125,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-3.3241019719383815\n"
+      "-3.32407368610221\n"
      ]
     }
    ],
@@ -159,15 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.0062724  -3.01493429 -2.99301822 -3.02810633 -3.03317652]\n",
-      "-3.01510155316607\n"
+      "[-3.05317354 -3.02570191 -3.00478644 -2.97435036 -3.01749552]\n",
+      "-3.015101553166069\n"
      ]
     }
    ],
@@ -193,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-3.0151336940967814\n"
+      "-3.0151622226253103\n"
      ]
     }
    ],
