split up data with linear model features into separate files

--- a/ImportLinModels.ipynb
+++ b/ImportLinModels.ipynb
@@ -246,20 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[['station']+model_names].to_csv('Processed/phase2.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('Processed/phase3.csv', index=False)"
+    "for station_id in np.arange(201, 276):\n",
+    "    df[df.station == station_id][['station']+model_names].to_csv(f'Processed/phase2/phase_2_station_{station_id}.csv', index=False)\n",
+    "    df[df.station == station_id].to_csv('Processed/phase3.csv', index=False)"
    ]
   },
   {
