fully corrected versions of saving phase 2 and 3 data

--- a/ImportLinModels.ipynb
+++ b/ImportLinModels.ipynb
@@ -246,13 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "for station_id in np.arange(201, 276):\n",
-    "    df[df.station == station_id][['station']+model_names].to_csv(f'Processed/phase2/phase_2_station_{station_id}.csv', index=False)\n",
-    "    df[df.station == station_id].to_csv('Processed/phase3.csv', index=False)"
+    "    df[df.station == station_id][['station', 'bikes']+model_names].to_csv(f'Processed/phase2/phase_2_station_{station_id}.csv', index=False)\n",
+    "    df[df.station == station_id].to_csv(f'Processed/phase3/phase_3_station_{station_id}.csv', index=False)"
    ]
   },
   {
