added submissions folder and decision tree submission

--- a/decision-trees.ipynb
+++ b/decision-trees.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
     "from sklearn.model_selection import cross_val_score, KFold\n",
@@ -53,15 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-2.24014337 -2.27365591 -2.27616487 -2.24327957 -2.28351254]\n",
-      "-2.2633512544802867\n"
+      "Pipeline(steps=[('manualfeatureselector',\n",
+      "                 <helpers.ManualFeatureSelector object at 0x7fd36ec9e0d0>),\n",
+      "                ('decisiontreeregressor', DecisionTreeRegressor())])\n",
+      "[-2.33494624 -2.25564516 -2.29551971 -2.2547491  -2.24856631]\n",
+      "-2.277885304659498\n"
      ]
     }
    ],
@@ -70,7 +74,6 @@
     "y = df['bikes']\n",
     "\n",
     "regr = make_pipeline(ManualFeatureSelector(['latitude', 'longitude', 'weekhour', 'windMeanSpeed.m.s', 'relHumidity.HR', 'airPressure.mb', 'hour', 'day', 'windMaxSpeed.m.s']), DecisionTreeRegressor())\n",
-    "\n",
     "scores = cross_val_score(regr, X, y, cv=KFold(n_splits=5, shuffle=True), scoring='neg_mean_absolute_error')\n",
     "\n",
     "print(scores)\n",
@@ -95,6 +98,40 @@
     "\n",
     "score = per_station_models_cross_val_mean(regr, df)\n",
     "print(score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "dft = pd.read_csv('test.csv')\n",
+    "ids = dft['Id']\n",
+    "dft = dft[['latitude', 'longitude', 'weekhour', 'windMeanSpeed.m.s', 'relHumidity.HR', 'airPressure.mb', 'hour', 'day', 'windMaxSpeed.m.s']]\n",
+    "\n",
+    "X = df.drop(columns=['bikes'])\n",
+    "y = df['bikes']\n",
+    "\n",
+    "regr = make_pipeline(ManualFeatureSelector(['latitude', 'longitude', 'weekhour', 'windMeanSpeed.m.s', 'relHumidity.HR', 'airPressure.mb', 'hour', 'day', 'windMaxSpeed.m.s']), DecisionTreeRegressor())\n",
+    "\n",
+    "model = regr.fit(X,y)\n",
+    "predictions = model.predict(dft)\n",
+    "\n",
+    "predictions_df = pd.DataFrame(ids)\n",
+    "predictions_df['bikes'] = predictions.astype(int)\n",
+    "predictions_df\n",
+    "\n",
+    "time = datetime.now().strftime(\"%d%H%M%S\")\n",
+    "\n",
+    "predictions_df.to_csv(f'Predictions/submission_{time}.csv',index=False)\n",
+    "\n",
+    "# scores = cross_val_score(regr, X, y, cv=KFold(n_splits=5, shuffle=True), scoring='neg_mean_absolute_error')\n",
+    "\n",
+    "# print(scores)\n",
+    "# print(scores.mean())"
    ]
   },
   {
