add code for making test set predictions with a model per station

--- a/decision-trees.ipynb
+++ b/decision-trees.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,18 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pipeline(steps=[('manualfeatureselector',\n",
-      "                 <helpers.ManualFeatureSelector object at 0x7fd36ec9e0d0>),\n",
-      "                ('decisiontreeregressor', DecisionTreeRegressor())])\n",
-      "[-2.33494624 -2.25564516 -2.29551971 -2.2547491  -2.24856631]\n",
-      "-2.277885304659498\n"
+      "[-2.24910394 -2.2266129  -2.22777778 -2.32508961 -2.22043011]\n",
+      "-2.2498028673835124\n"
      ]
     }
    ],
@@ -89,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-2.092013906523974\n"
+      "-2.0714825563818846\n"
      ]
     }
    ],
@@ -132,6 +129,39 @@
     "\n",
     "# print(scores)\n",
     "# print(scores.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "df = load_all_processed_data()\n",
+    "dft = pd.read_csv('test.csv')\n",
+    "\n",
+    "predictions_dfs = []\n",
+    "\n",
+    "for station in np.arange(201, 276):\n",
+    "    stationdf = df[df['station'] == station]\n",
+    "    test_stationdf = dft[dft['station'] == station].copy()\n",
+    "    \n",
+    "    X = stationdf.drop(columns=['bikes'])\n",
+    "    y = stationdf.bikes\n",
+    "    \n",
+    "    regr = make_pipeline(ManualFeatureSelector(['latitude', 'longitude', 'weekhour', 'windMeanSpeed.m.s', 'relHumidity.HR', 'airPressure.mb', 'hour', 'day', 'windMaxSpeed.m.s']), DecisionTreeRegressor())\n",
+    "\n",
+    "    model = regr.fit(X,y)\n",
+    "    test_stationdf['bikes'] = model.predict(test_stationdf).astype(int)\n",
+    "    predictions_dfs.append(test_stationdf[['Id', 'bikes']])\n",
+    "\n",
+    "predictions_df = pd.concat(predictions_dfs)\n",
+    "    \n",
+    "time = datetime.now().strftime(\"%d%H%M%S\")\n",
+    "\n",
+    "predictions_df.to_csv(f'Predictions/submission_{time}.csv',index=False)"
    ]
   },
   {
