decision trees file noe correctly merged

--- a/decision-trees.ipynb
+++ b/decision-trees.ipynb
@@ -17,6 +17,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
+    "from datetime import datetime\n",
     "from sklearn.model_selection import cross_val_score, KFold\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.pipeline import make_pipeline\n",
@@ -98,13 +99,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All Stations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
     "dft = pd.read_csv('test.csv')\n",
     "ids = dft['Id']\n",
     "dft = dft[['latitude', 'longitude', 'weekhour', 'windMeanSpeed.m.s', 'relHumidity.HR', 'airPressure.mb', 'hour', 'day', 'windMaxSpeed.m.s']]\n",
@@ -119,16 +125,17 @@
     "\n",
     "predictions_df = pd.DataFrame(ids)\n",
     "predictions_df['bikes'] = predictions.astype(int)\n",
-    "predictions_df\n",
     "\n",
     "time = datetime.now().strftime(\"%d%H%M%S\")\n",
     "\n",
-    "predictions_df.to_csv(f'Predictions/submission_{time}.csv',index=False)\n",
-    "\n",
-    "# scores = cross_val_score(regr, X, y, cv=KFold(n_splits=5, shuffle=True), scoring='neg_mean_absolute_error')\n",
-    "\n",
-    "# print(scores)\n",
-    "# print(scores.mean())"
+    "predictions_df.to_csv(f'Predictions/submission_{time}.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Per Station"
    ]
   },
   {
@@ -137,8 +144,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
     "df = load_all_processed_data()\n",
     "dft = pd.read_csv('test.csv')\n",
     "\n",
