--- a/linear-models.ipynb
+++ b/linear-models.ipynb
@@ -1759,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1772,14 +1772,12 @@
     "    model.fit(X,y)\n",
     "    dft['bikes'] = model.predict(dft).clip(min=0)\n",
     "    dft['bikes'] = dft[['bikes', 'numDocks']].min(axis=1)\n",
-    "    dft[['Id', 'bikes']].to_csv(filename,index=False)\n",
-    "    \n",
-    "    return dft[['Id', 'bikes']]"
+    "    dft[['Id', 'bikes']].to_csv(filename,index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1802,19 +1800,15 @@
     "\n",
     "    predictions_df = pd.concat(predictions_dfs)\n",
     "\n",
-    "    predictions_df.to_csv(filename,index=False)\n",
-    "    \n",
-    "    return predictions_df"
+    "    predictions_df.to_csv(filename,index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
     "for alpha in [0.01, 1.0]:\n",
     "    time = datetime.now().strftime(\"%d%H%M%S\")\n",
     "    filename = f'Predictions/single_model_submission_lasso_{alpha}_clipped_{time}.csv'\n",
@@ -1823,12 +1817,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
     "for alpha in [0.01, 0.1, 1.0]:\n",
     "    time = datetime.now().strftime(\"%d%H%M%S\")\n",
     "    filename = f'Predictions/single_model_submission_ridge_{alpha}_clipped_{time}.csv'\n",
@@ -1837,12 +1829,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
+    "time = datetime.now().strftime(\"%d%H%M%S\")\n",
+    "filename = f'Predictions/single_model_submission_linreg_normalized_clipped_{time}.csv'\n",
+    "single_model_submission(single_model_regr(LinearRegression(normalize=True)), df, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = datetime.now().strftime(\"%d%H%M%S\")\n",
+    "filename = f'Predictions/single_model_submission_linreg_unnormalized_clipped_{time}.csv'\n",
+    "single_model_submission(single_model_regr(LinearRegression(normalize=False)), df, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for alpha in [0.01, 1.0]:\n",
     "    time = datetime.now().strftime(\"%d%H%M%S\")\n",
     "    filename = f'Predictions/per_station_models_submission_lasso_{alpha}_clipped_{time}.csv'\n",
@@ -1851,12 +1863,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
     "for alpha in [0.01, 0.1, 1.0]:\n",
     "    time = datetime.now().strftime(\"%d%H%M%S\")\n",
     "    filename = f'Predictions/per_station_models_submission_ridge_{alpha}_clipped_{time}.csv'\n",
@@ -1865,123 +1875,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>bikes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.625654</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1.975558</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>7.490911</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>3.222512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1.332309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2245</th>\n",
-       "      <td>2246</td>\n",
-       "      <td>10.600823</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2246</th>\n",
-       "      <td>2247</td>\n",
-       "      <td>11.294973</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2247</th>\n",
-       "      <td>2248</td>\n",
-       "      <td>7.519526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2248</th>\n",
-       "      <td>2249</td>\n",
-       "      <td>12.554946</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2249</th>\n",
-       "      <td>2250</td>\n",
-       "      <td>13.517156</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2250 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        Id      bikes\n",
-       "0        1   0.625654\n",
-       "1        2   1.975558\n",
-       "2        3   7.490911\n",
-       "3        4   3.222512\n",
-       "4        5   1.332309\n",
-       "...    ...        ...\n",
-       "2245  2246  10.600823\n",
-       "2246  2247  11.294973\n",
-       "2247  2248   7.519526\n",
-       "2248  2249  12.554946\n",
-       "2249  2250  13.517156\n",
-       "\n",
-       "[2250 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from datetime import datetime\n",
-    "\n",
     "time = datetime.now().strftime(\"%d%H%M%S\")\n",
     "filename = f'Predictions/per_station_models_submission_linreg_normalized_clipped_{time}.csv'\n",
     "per_station_model_submission(per_station_model_regr(LinearRegression(normalize=True)), df, filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = datetime.now().strftime(\"%d%H%M%S\")\n",
+    "filename = f'Predictions/per_station_models_submission_linreg_unnormalized_clipped_{time}.csv'\n",
+    "per_station_model_submission(per_station_model_regr(LinearRegression(normalize=False)), df, filename)"
    ]
   },
   {
